Use VarHandle to set thread name (#537)